--- a/EMRProject/EMRProject/EMR/Site.Master
+++ b/EMRProject/EMRProject/EMR/Site.Master
@@ -78,7 +78,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="" >Electronic Medical Records System</a>
+                    <a class="navbar-brand" runat="server" href="" >Intelligent Electronic Medical Records System</a>
                 </div>
                
             </div>
